--- a/src/common/Layout/components/Header/Header.scss
+++ b/src/common/Layout/components/Header/Header.scss
@@ -9,7 +9,7 @@
   &__menu {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: rem(20);
+    gap: rem(37);
     display: none;
   }
 
